# exercism_io

python/: Makefile  Pipfile  pyproject.toml
python/armstrong-numbers/: armstrong_numbers.py
python/armstrong-numbers/.exercism/: metadata.json
python/collatz-conjecture/: collatz_conjecture.py
python/collatz-conjecture/.exercism/: metadata.json
python/currency-exchange/: exchange.py
python/currency-exchange/.exercism/: metadata.json
python/difference-of-squares/.exercism/: metadata.json
python/ghost-gobble-arcade-game/: arcade_game.py
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/gigasecond/: Makefile  gigasecond.py  gigasecond_test.py
python/gigasecond/.exercism/: metadata.json
python/grains/: grains.py
python/grains/.exercism/: metadata.json
python/guidos-gorgeous-lasagna/: lasagna.py
python/guidos-gorgeous-lasagna/.exercism/: metadata.json
python/hello-world/: Makefile  hello_world.py  hello_world_test.py
python/hello-world/.exercism/: metadata.json
python/high-scores/: Makefile  high_scores.py  high_scores_test.py
python/high-scores/.exercism/: metadata.json
python/meltdown-mitigation/: conditionals.py
python/meltdown-mitigation/.exercism/: metadata.json
python/raindrops/: raindrops.py
python/reverse-string/: Makefile  reverse_string.py  reverse_string_test.py
python/rna-transcription/: Makefile  rna_transcription.py  rna_transcription_test.py
python/triangle/: triangle.py
python/two-fer/: Makefile  two_fer.py  two_fer_test.py
python/yacht/: Makefile  yacht.py  yacht_test.py
(+9 files in other folders)
